name:                swagger
version:             0.1.0.0
synopsis:            swagger 1.2 parser
description:         Please see README.md
homepage:            http://github.com/pbogdan/swagger#readme
license:             BSD3
license-file:        LICENSE
author:              Piotr Bogdan
maintainer:          ppbogdan@gmail.com
copyright:           2016 Piotr Bogdan
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
                       , Lib.Swagger.ResourceListing
  build-depends:       base
                       , aeson
                       , bytestring
                       , unordered-containers
                       , text
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings

executable swagger-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , swagger
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings

test-suite swagger-test
  type:                 exitcode-stdio-1.0
  default-language:     Haskell2010
  default-extensions:   OverloadedStrings
  hs-source-dirs:       test
  ghc-options:          -Wall -threaded -rtsopts -with-rtsopts=-N
  main-is:              Spec.hs
  build-depends:        base
                      , aeson
                      , bytestring
                      , text
                      , hspec
                      , swagger
                      , unordered-containers

source-repository head
  type:     git
  location: https://github.com/pbogdan/swagger
